# Ebot

./: .env.example  pyproject.toml
scripts/: init_db.sql
src/E_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/napcat_bot/: config.py  main.py
src/napcat_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/napcat_bot/adapter/: onebot_ws_server.py
src/napcat_bot/handlers/: commands.py  filters.py  on_message.py
src/napcat_bot/services/: db.py  llm_client.py  memory.py  reply.py  state.py
src/napcat_bot/utils/: log.py
